centrifuge added on stomach chemical update

--- a/Resources/Prototypes/Body/Organs/human.yml
+++ b/Resources/Prototypes/Body/Organs/human.yml
@@ -208,7 +208,10 @@
     groups:
     - id: Food
     - id: Drink
-
+  - type: ReactionMixer
+    reactionTypes:
+    - Centrifuge
+    
 - type: entity
   id: OrganHumanLiver
   parent: BaseHumanOrgan
